# RegStudio

./: .gitignore  CMakeLists.txt  README.md  TODO.md
resources/: app.manifest  resource.rc
src/: main.cpp
